tests/invalid/DefiniteAssign_Invalid_4.whiley
method f(any this) :
    debug this

method g() :
    f(x)
